# phpp

./: .gitignore  Cargo.toml  README.md  index.php
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
asset/: autoload.php  autoload_classmap.php  autoload_real.php  autoload_static.php
src/: app.rs  config.rs  error.rs  io.rs  json.rs  main.rs  package.rs  search.rs
src/autoload/: de.rs  mod.rs  ser.rs
src/json/: tests.rs
src/psr4/: de.rs  mod.rs  ser.rs
