[package]
name = "composer2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = "0.12.4"
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
dirs = "4.0"
thiserror = {version = "^1"}